# mirage-engine

./: Cargo.toml  README.md  todo
src/: lib.rs  main.rs  mod.rs
src/audio/: audio_engine.rs  audio_listener.rs  audio_source.rs  mod.rs
src/core/: event_system.rs  game_events.rs  game_loop.rs  mod.rs  timing.rs
src/ecs/: component.rs  entity.rs  mod.rs  system.rs
src/rendering/: camera.rs  light.rs  material.rs  mesh.rs  mod.rs  model.rs  renderer.rs  shader.rs  texture.rs
src/scene/: mod.rs  scene.rs  scene_manager.rs
src/ui/: app.rs  editor.rs  editor_components.rs  mod.rs  window.rs
src/ui/editor/: audio_panel.rs  console.rs  editor_ui.rs  game_view.rs  hierarchy.rs  inspector.rs  mod.rs  project.rs  scene_view.rs  ui_components.rs
src/utils/: mod.rs
