[package]
name = "mirage-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", features = ["persistence"] }
egui_glow = "0.23.0"
glow = "0.12.0"
winit = "0.28.6"
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]
