[package]
name = "mirage-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17"
winit = "0.28"
tokio = { version = "1.28", features = ["full"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
glam = "0.24"
bytemuck = { version = "1.13", features = ["derive"] }
image = "0.24"
tobj = "4.0"
egui = "0.22"
egui-wgpu = "0.22"
egui-winit = "0.22"
eframe = "0.22"
hecs = "0.10"
uuid = { version = "1.3", features = ["v4"] }

[lib]
name = "mirage_engine"
path = "src/lib.rs"

[[bin]]
name = "mirage-engine"
path = "src/main.rs"
